src/stylus/assets/preloader.styl
@import "../variables.styl"
json('../../js/configurations/animation.json');

.logo.preloader-logo
    opacity 0
    stroke-dasharray 1500
    stroke-dashoffset 1500
    animation transitionLogo 0s linear forwards preloader-logo_drawer_delay,
                dash preloader-logo_drawer ease-in-out forwards preloader-logo_drawer_delay,
                neon logo-glowing ease-in-out infinite alternate
    transform translate3d(-50%, -50%,0) scale3d(1.6,1.6,1.6)
    transition transform preloader-logo_changing ease-in-out
    overflow visible
.preloader
    position absolute
    opacity 1
    visibility visible
    top 0
    left 0
    right 0
    bottom 0
    background-image linear-gradient(270deg, #944f60, #a75065, #01020a)
    background-size 600% 600%
    animation preloaderBg preloader-background ease infinite
    transition all preloader-fading cubic-bezier(0.42, 0, 1, 0.21) preloader-fading_delay
    z-index 1000000
    &.ended 
        opacity 0
        visibility hidden
        .preloader-logo
            transform translate3d(-50%, -50%, 0) scale3d(1,1,1)

+media-query(only screen, max-width $medium)
  .logo.preloader-logo
    transform translate3d(-50%, -50%, 0) scale3d(1.2,1.2,1.2)

@supports (-ms-ime-align:auto)
    .logo.preloader-logo
        stroke-dashoffset 0

